smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/unclosed-string1.smithy
// Syntax error at line 4, column 1: Expected: '"', but found '[EOF]'
namespace abc.def
@foo("
